--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -11,8 +11,8 @@
 \textbf{Program Overview} &&\\
 \hspace{.5cm} Years Implemented &1972--1982&1978--1985\\
 \hspace{.5cm} First-phase Treatment & Birth to 5 years old & Birth to 5 years old &\checkmark \\
-\hspace{.5cm} Second-phase Treatment & 5 to 8 years old & Birth to 5 years old &\checkmark \\
-\hspace{.5cm} Initial Sample &122&64\\
+\hspace{.5cm} Second-phase Treatment & 5 to 8 years old & 5 to 8 years old &\checkmark \\
+\hspace{.5cm} Recruited Sample &122&67\\
 \hspace{.5cm} \# of Cohorts &4&2\\
 \midrule
 \textbf{Eligibility} & Socio-economic disadvantage according to a multi-factor index (see Section \ref{section:eligibility})&Socio-economic disadvantage according to a multi-factor index (see Section \ref{section:eligibility}) & \checkmark\\
@@ -20,7 +20,8 @@
 \textbf{Control} &&\\
 \hspace{.5cm} N &54&23\\
 \hspace{.5cm} Compensation & Diapers from birth to age 3, unlimited formula from birth to 15 months & Diapers from birth to age 3, unlimited formula from birth to 15 months & \checkmark \\
-\hspace{.5cm} Treatment Substitution & 66\% & 64\%\\
+\hspace{.5cm} Treatment   & 66\% & 64\%\\
+\hspace{.5cm} Substitution & & \\
 \midrule
 \textbf{Treatment} & Center-based childcare & Center-based childcare and family education\\
 \hspace{.5cm} \textbf{Center-based} \\
@@ -33,7 +34,7 @@
 &1:5--6 during ages 4--5 & 1:5--6 during ages 4--5 & \checkmark\\
 \hspace{.5cm} Staff Qualifications &Mixed diplomas; experienced& Mixed diplomas; experienced & \checkmark\\ \\
 \hspace{.5cm} \textbf{Family Education}  & & \\
-\hspace{.5cm} N & (not part of the program) &24\\
+\hspace{.5cm} N & (not part of the program) &25\\
 \hspace{.5cm} Intensity && One hour-long home visits. 2--3 per month during ages 0--3. 1--2 per month during ages 4--5\\
 \hspace{.5cm} Curriculum & & Social and mental stimulation; parent-child interaction\\
 \hspace{.5cm} Staff-to-child Ratio &&1:1\\
